--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- workaround for socket.io: https://github.com/angular/angular-cli/issues/10824 -->
+  <script type="text/javascript">
+    window.global = window;
+  </script>
 </head>
 <body>
   <app-root></app-root>
